--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,35 @@
-# Prerequisites
-*.d
+# Build directories
+build/
+**/build/
 
-# Object files
-*.o
-*.ko
-*.obj
+# ESP-IDF managed components
+managed_components/
+**/managed_components/
+
+# ESP-IDF config and lock files
+dependencies.lock
+**/dependencies.lock
+sdkconfig
+**/sdkconfig
+sdkconfig.old
+**/sdkconfig.old
+
+# IDE specific
+.vscode/.browse.c_cpp.db*
+.vscode/settings.json
+.vscode/launch.json
+.vscode/settings.json
+.vscode/ipch/
+.devcontainer/
+
+# Temp files
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+*~
+
+# Binary output files
+*.bin
 *.elf
-
-# Linker output
-*.ilk
 *.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
