--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .vscode/.browse.c_cpp.db*
 .vscode/settings.json
 .vscode/launch.json
+.vscode/c_cpp_properties.json
 .vscode/ipch/
 .devcontainer/
 
