21 captive/disabled pass and save when scan fail, better rescan button

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 .vscode/ipch/
 .devcontainer/
 
+# ESP-IDF build directories if accidentally built component instead of example project
+build/
+
 # Temp files
 .DS_Store
 Thumbs.db
